--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title:              sagiv-barhoom.me
 #email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Sagiv barhoom
-baseurl:            ""
+baseurl:            "/"
 url:                "https:sagiv-barhoom.me"
 
 # Social Profiles
