--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title:              sagiv-barhoom.me
 description:        A Blog Theme by Start Bootstrap
 author:             Sagiv barhoom
 baseurl:            "/"
-url:                "https:sagiv-barhoom.me"
+url:                "https://sagiv-barhoom.me"
 
 # Social Profiles
 twitter_username:   sagivba
