--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl:            "/"
 url:                "https://sagiv-barhoom.me"
 
 # Social Profiles
-twitter_username:   sagivba
+twitter_username:   BarhoomSagiv
 github_username:    sagivba
 #facebook_username:  StartBootstrap
 linkedin_username:  sagivba 
