--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # this is a nmplate based  on startbootstrap: "https://blackrockdigital.github.io"
 
-title:              sagiv-barhoom.me
-#email:              your-email@example.com
+title:              Sagiv Barhoom 
 description:        A Blog Theme by Start Bootstrap
 author:             Sagiv barhoom
 baseurl:            "/"
