--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-# this is a nmplate based  on startbootstrap: "https://blackrockdigital.github.io"
+# this is a template based  on startbootstrap: "https://blackrockdigital.github.io"
 
 title:              Sagiv Barhoom 
-description:        A Blog Theme by Start Bootstrap
+description:        Information systems, infrastructure, project management and more ...
 author:             Sagiv barhoom
 baseurl:            "/"
 url:                "https://sagiv-barhoom.me"
