--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # this is a template based  on startbootstrap: "https://blackrockdigital.github.io"
 
 title:              Sagiv Barhoom 
-description:        Information systems, infrastructure, project management and more ...
+description:        Information systems,databases infrastructure, project management and more ...
 author:             Sagiv barhoom
 baseurl:            "/"
 url:                "https://sagiv-barhoom.me"
