--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,13 @@ url:                "https://sagiv-barhoom.me"
 # Social Profiles
 twitter_username:   BarhoomSagiv
 github_username:    sagivba
-#facebook_username:  StartBootstrap
+#facebook_username:  sagivba
 linkedin_username:  sagivba 
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-162783460-1 # out your google-analytics code
+
+gems: [jekyll-mermaid]
 
 # Build settings
 markdown:           kramdown
@@ -23,3 +25,5 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
+mermaid:
+  src: 'path/to/mermaid.js'
