--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ github_username:    sagivba
 linkedin_username:  sagivba 
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-162783460-1 # out your google-analytics code
-
+#google_analytics:   UA-162783460-1 # out your google-analytics code
+google_analytics:   336410508 # out your google-analytics GA4 code
 
 
 # Build settings
