--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ linkedin_username:  sagivba
 
 # Add your google-analytics ID here to activate google analytics
 #google_analytics:   UA-162783460-1 # out your google-analytics code
-google_analytics:   336410508 # out your google-analytics GA4 code
+google_analytics:   G-VM0RV3BHEM # out your google-analytics GA4 code
 
 
 # Build settings
